--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@types/mocha": "^5.2.6",
         "@types/node": "^10.12.21",
         "@types/vscode": "^1.36.0",
+        "@types/which": "^1.3.1",
         "@typescript-eslint/eslint-plugin": "^1.13.0",
         "@typescript-eslint/parser": "^1.13.0",
         "eslint": "^6.1.0",
@@ -51,5 +52,8 @@
     },
     "prettier": {
         "trailingComma": "es5"
+    },
+    "dependencies": {
+        "which": "^1.3.1"
     }
 }
